--- a/theme/snippets/jumplink-article-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-article-item-col-ratio-3-4.liquid
@@ -1,7 +1,5 @@
-{% comment %} <a class="col px-0 content-box ratio-3-4" rv-route="'{{ article.url }}'" href="{{article.url}}" style="background-color: {{ color }};"> {% endcomment %}
-<div class="col px-0 content-box ratio-3-4" style="background-color: {{ color }};">
+<rv-shopify-article-item class="col px-0 content-box ratio-3-4" rv-route="'{{ article.url }}'" href="{{article.url}}" style="background-color: {{ color }};">
   <img class="content has-xs-spacing has-sm-spacing" rv-src="'{{ article.image | img_url: articleImageSize}}'" alt="{{acticle.title}}" style="padding: 52px" />
-
   {% if article.title %}
     <div class="position-absolute w-100 bottom-0" style="{{ articleTitleStyle }}">
       <div class="text-center title-xs-spacing title-sm-spacing text-truncate" style="padding: 14px 0;">
@@ -9,5 +7,4 @@
       </div>
     </div>
   {% endif %}
-</div>
-{% comment %} </a> {% endcomment %}
+</rv-shopify-article-item>
