--- a/theme/snippets/jumplink-article-list-item-view-magazine.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-magazine.liquid
@@ -1,28 +1,73 @@
 {% assign ratioClass = "ratio-3-2" %}
-{% assign imageSize = "1200x800" %}
+{% assign imageSize = "2400x1600" %}
 {% assign imageSpacing = 0 %}
 
-<div class="container-fluid jumplink-article-list-item jumplink-article-list-item-view-magazine" data-tags='{% include 'jumplink-utils-json-tags', tags: article.tags %}' style="background-color: {{color}};">
-  <article class="row" data-handle="{{article.handle}}">
+{% comment %}
+  If showDetail is true this snippet shows all the details of the blog article, otherwise only the stuff we want to show in the list view
+{% endcomment %}
 
-    <div class="col-12 px-0 content-box {{ratioClass}}">
-      <img class="content" src="{{ article.image | img_url: imageSize, scale: 2 }}" alt="{{article.image.alt}}" style="padding: {{imageSpacing}}px" />
+<div class="container-fluid jumplink-article-list-item jumplink-article-list-item-view-magazine" data-tags='{% include 'jumplink-utils-json-tags', tags: article.tags %}' style="background-color: {{color}};">
+  <rv-shopify-article-item data-handle="{{article.handle}}">
+
+    {% comment %} First image {% endcomment %}
+    <div class="row">
+      {% for image in images limit:1 %}
+        <div class="col-12 col-md px-0 content-box {{ratioClass}}">
+          <img class="content" src="{{ image }}" rv-src="'{{ image }}' | img_url '{{imageSize}}'" alt="{{article.title}}" style="padding: {{imageSpacing}}px" />
+        </div>
+      {% endfor %}
     </div>
+  
+    {% comment %} Image 2-4 {% endcomment %}
+    <div class="row">
+      {% for image in images offset:1 limit:2 %}
+        <div class="col-12 col-md px-0 content-box {{ratioClass}}">
+          <img class="content" src="{{ image }}" rv-src="'{{ image }}' | img_url '{{imageSize}}'" alt="{{article.title}}" style="padding: {{imageSpacing}}px" />
+        </div>
+      {% endfor %}
+    </div>
+
+    {% comment %} Image 4-.. {% endcomment %}
+    <div class="row">
+      {% for image in images offset:3 %}
+        <div class="col-12 col-md px-0 content-box {{ratioClass}}">
+          <img class="content" src="{{ image }}" rv-src="'{{ image }}' | img_url '{{imageSize}}'" alt="{{article.title}}" style="padding: {{imageSpacing}}px" />
+        </div>
+      {% endfor %}
+    </div>
+
 
     <div class="col-12 p-5 magazine-columns has-xs-spacing">
       <h1>{{article.title}}</h1>
-      <p><small><strong>
-        <span>{{ article.published_at | time_tag: '%d. %B %Y' }} </span>
-        <span class="pl-3">By {{article.user.first_name }} {{article.user.last_name}}</span>
-      </strong></small></p>
+      <p>
+        <small>
+          <strong>
+            <span>{{ article.published_at | time_tag: '%d. %B %Y' }} </span>
+            <span class="pl-3">By {{article.user.first_name }} {{article.user.last_name}}</span>
+          </strong>
+        </small>
+      </p>
       <hr>
-      {{ article.excerpt_or_content }}
+      {% if showDetail %}
+        {{ article.excerpt_or_content }}
+      {% else %}
+        {{ article.content }}
+      {% endif %}
       <hr>
-      <p><small><strong>
-        <span>Share this article</span>
-        <span class="pl-3">{ comments | count } Comments</span>
-        {% comment %} <a class="ml-auto float-right" rv-route="'{{article.url}}'">View Article</a> {% endcomment %}
-      </strong></small></p>
+      <p>
+        <small>
+          <strong>
+            <span>Share this article</span>
+            <span class="pl-3">{ comments | count } Comments</span>
+            {% unless showDetail %}
+              <a class="ml-auto float-right" rv-route="'{{article.url}}'">View Article</a>
+            {% endunless %}
+          </strong>
+        </small>
+      </p>
+
+      
+
     </div>
-  </article>
+  </rv-shopify-article-item>
 </div>
