--- a/theme/snippets/jumplink-product-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-product-item-col-ratio-3-4.liquid
@@ -12,9 +12,9 @@
   {% assign imageSize = '1200x1600' %}
 {% endif %}
 
-<rv-shopify-product-item rv-product="{{product | json}}" class="{{colClass}} {{ orderClass }} px-0 content-box ratio-3-4">
+<rv-shopify-product-item handle="{{product.handle}}" class="{{colClass}} {{ orderClass }} px-0 content-box ratio-3-4">
   <a rv-route="'{{ product.url | within: collection }}'" href="{{product.url | within: collection }}">
-    <img class="content has-xs-spacing has-sm-spacing" rv-src="'{{ product.featured_image | img_url: imageSize}}'" alt="{{product.featured_image.alt}}"  style="padding-bottom: 52px;"/>
+    <img class="content has-xs-spacing has-sm-spacing" src="{{ product.featured_image | img_url: imageSize}}" alt="{{product.featured_image.alt}}" style="padding-bottom: 52px;"/>
   </a>
   <div class="position-absolute w-100 bottom-0">
     <div class="text-center title-xs-spacing title-sm-spacing text-truncate">
