--- a/theme/templates/article.liquid
+++ b/theme/templates/article.liquid
@@ -1,26 +1,35 @@
+{% assign type = article.metafields["global"]["detail-type"] %}
+{% assign color = article.metafields["global"]["color"] %}
+
+{% if article.metafields["global"]["detail-image-1"] or article.metafields["global"]["detail-image-2"] or article.metafields["global"]["detail-image-3"] or article.metafields["global"]["detail-image-4"] or article.metafields["global"]["detail-image-5"] or article.metafields["global"]["detail-image-6"] %}
+  {% capture imagesString %}{% if article.metafields["global"]["detail-image-1"] %}{{ article.metafields["global"]["detail-image-1"] }}%break%{% endif %}{% if article.metafields["global"]["detail-image-2"] %}{{ article.metafields["global"]["detail-image-2"] }}%break%{% endif %}{% if article.metafields["global"]["detail-image-3"] %}{{ article.metafields["global"]["detail-image-3"] }}%break%{% endif %}{% if article.metafields["global"]["detail-image-4"] %}{{ article.metafields["global"]["detail-image-4"] }}%break%{% endif %}{% if article.metafields["global"]["detail-image-5"] %}{{ article.metafields["global"]["detail-image-5"] }}%break%{% endif %}{% if article.metafields["global"]["detail-image-6"] %}{{ article.metafields["global"]["detail-image-6"] }}%break%{% endif %}{% endcapture %}{% assign images = imagesString | split: '%break%' %}
+{% else %}
+  {% comment %} Fallback get overview images: Merged featured images and metaflied images to array {% endcomment %}
+  {% capture imagesString %}{% if article.image %}{{ article.image.src | img_url: 'master' }}%break%{% endif %}{% if article.metafields["global"]["Image-2"] %}{{ article.metafields["global"]["Image-2"] }}%break%{% endif %}{% if article.metafields["global"]["Image-3"] %}{{ article.metafields["global"]["Image-3"] }}%break%{% endif %}{% endcapture %}{% assign images = imagesString | split: '%break%' %}
+{% endif %}
+
 {% paginate article.comments by 50 %}
+  {% comment %}
+    When a comment has just been submitted, it's not shown right away.
+    Shopify needs to wait until it knows for sure that it is not spam to publish it.
+    We can still show right away *to its author* the comment he just submitted 
+    — although that comment may not have been published yet.
+    When a comment is submitted, the browser is redirected to a page that 
+    includes the new comment id in its URL. Example:
+    http://shopname.myshopify.com/blogs/news/2022072-my-post?comment=3721372
+    When a comment ID is specified in an article URL, that comment is accessible in the 
+    template through a Liquid object called comment. 
+    That comment is a full-fledged comment variable that has all the regular comment properties: 
+    http://docs.shopify.com/themes/liquid-variables/comment.
+    Note that comment.created_at will only be defined if the comment did not have any blank field 
+    — was posted without error.
+  {% endcomment %}
 
-{% comment %}
-When a comment has just been submitted, it's not shown right away.
-Shopify needs to wait until it knows for sure that it is not spam to publish it.
-We can still show right away *to its author* the comment he just submitted 
-— although that comment may not have been published yet.
-When a comment is submitted, the browser is redirected to a page that 
-includes the new comment id in its URL. Example:
-http://shopname.myshopify.com/blogs/news/2022072-my-post?comment=3721372
-When a comment ID is specified in an article URL, that comment is accessible in the 
-template through a Liquid object called comment. 
-That comment is a full-fledged comment variable that has all the regular comment properties: 
-http://docs.shopify.com/themes/liquid-variables/comment.
-Note that comment.created_at will only be defined if the comment did not have any blank field 
-— was posted without error.
-{% endcomment %}
-
-
-<div class="container-fluid pt-5">
-
-  <h1 class="hidden-xs-up"><a href="{{ blog.url }}">{{ blog.title }}</a></h1>
-  
-</div>
+  {% case type %}
+    {% when 'magazine' %}
+        {% include 'jumplink-article-list-item-view-magazine', color: color, images: images, showDetail: true %}
+    {% else %}
+        {% include 'jumplink-article-list-item-view-magazine', color: color, images: images, showDetail: true %}
+  {% endcase %}
 
 {% endpaginate %}
