[Component:Share] Start share site component

--- a/src/scss/extensions/_cursor.scss
+++ b/src/scss/extensions/_cursor.scss
@@ -1,4 +1,4 @@
-button, .btn, select, .custom-select, [data-itemslide-method], [rv-on-click], [rv-on-tap] {
+button, .btn, select, .custom-select, [href] {
   cursor: pointer;
 }
 
