--- a/theme/snippets/jumplink-article-item-col-ratio-3-4.liquid
+++ b/theme/snippets/jumplink-article-item-col-ratio-3-4.liquid
@@ -1,4 +1,8 @@
-<rv-shopify-article-item class="col px-0 content-box ratio-3-4" rv-route="'{{ article.url }}'" href="{{article.url}}" style="background-color: {{ color }};">
+{% if colClass == blank %}
+  {% assign colClass = 'col' %}
+{% endif %}
+
+<rv-shopify-article-item class="{{ colClass }} px-0 content-box ratio-3-4" rv-route="'{{ article.url }}'" href="{{article.url}}" style="background-color: {{ color }};">
   <img class="content has-xs-spacing has-sm-spacing" rv-src="'{{ article.image | img_url: articleImageSize}}'" alt="{{acticle.title}}" style="padding: 52px" />
   {% if article.title %}
     <div class="position-absolute w-100 bottom-0" style="{{ articleTitleStyle }}">
