--- a/theme/snippets/jumplink-article-list-item-view-2-grid-story-product.liquid
+++ b/theme/snippets/jumplink-article-list-item-view-2-grid-story-product.liquid
@@ -8,7 +8,7 @@
 
 <div data-tags='{% include 'jumplink-utils-json-tags', tags: article.tags %}' class="container-fluid position-relative jumplink-article-list-item jumplink-article-list-item-view-2-grid-story-product">
   <div class="row">
-    {% include 'jumplink-article-item-col-ratio-3-4' with article, color, articleTitleStyle, imageSize: articleImageSize  %}
+    {% include 'jumplink-article-item-col-ratio-3-4' with article, color, articleTitleStyle, articleImageSize: articleImageSize  %}
     {% include 'jumplink-product-item-col-ratio-3-4' with product, orderClass: productOrderClass  %}
   </div>
 </div>
