[Stories] Share and video embedding (detail and overview)

--- a/src/ts/components/_components.scss
+++ b/src/ts/components/_components.scss
@@ -5,6 +5,7 @@
 @import './shopify-login-form/shopify-login-form.component.scss';
 @import './shopify-product/shopify-product.component.scss';
 @import './shopify-product-item/shopify-product-item.component.scss';
+@import './share/share.component.scss';
 @import './icon/icon.component.scss';
 @import './newsletter/newsletter.component.scss';
 @import './instagram/instagram.component.scss';
