--- a/src/ts/components/share/share.component.html
+++ b/src/ts/components/share/share.component.html
@@ -1,4 +1,4 @@
-<span rv-text="label" rv-></span>
+<span class="share-label" rv-text="label" rv-show="isNative" rv-text="label"></span>
 <div class="web-share" style="display: none">
 	<div class="web-share-container web-share-grid">
     <div class="web-share-title">SHARE VIA</div>
