--- a/theme/snippets/jumplink-navigation.liquid
+++ b/theme/snippets/jumplink-navigation.liquid
@@ -80,6 +80,7 @@
                         </div>
                       </div>
                     {% endif %}
+                    {% assign collectionBefore = collection %}
                   {% endfor %}
                 </div>
 
