--- a/theme/snippets/jumplink-utils-barba-container-attributes.liquid
+++ b/theme/snippets/jumplink-utils-barba-container-attributes.liquid
@@ -32,6 +32,7 @@ data-template='{% include 'jumplink-utils-json-template' %}'
 {% if parseCollection and collection %}
   data-collection-handle={{collection.handle | json }}
   data-collection-title={{collection.title | json }}
+  data-collection-url="{{collection.url }}"
 
   {% comment %}
     Paginate informations needed for the show all products function
