--- a/theme/snippets/jumplink-pagination.liquid
+++ b/theme/snippets/jumplink-pagination.liquid
@@ -1,14 +1,15 @@
 {% if paginate.pages > 1 %}
-  <div  class="row">
-    <div class="col-xs-12">
+  <div class="row">
+    <div class="col-12 text-center">
+      
+      {% comment %}
       <nav aria-label="Page navigation" class="">
-
         <ul class="pagination justify-content-center">
 
           <li class="page-item {% unless paginate.previous.is_link %}disabled{% endunless %}">
-            <a class="page-link" rv-route="'{{ paginate.previous.url}}'" href="{{ paginate.previous.url }}{{paginate_hash}}" {% unless paginate.next.is_link %}disabled="disabled"{% endunless %} aria-label="{{ 'navigation.paginate.prev_label' | t }}">
-              {% include 'jumplink-iconset', name: 'arrow', direction: 'left' %}
-              <span class="sr-only">{{ 'collection.paginate.prev_label' | t }}</span>
+            <a class="page-link" rv-route="'{{ paginate.previous.url}}'" href="{{ paginate.previous.url }}{{ paginate_hash }}" {% unless paginate.next.is_link %}disabled="disabled"{% endunless %} aria-label="{{ 'snippets.jumplink-pagination.prev_label' | t }}">
+
+              <span class="sr-only">{{ 'snippets.jumplink-pagination.prev_label' | t }}</span>
             </a>
           </li>
           
@@ -20,22 +21,29 @@
 
           {% if show_all_active %}
             <li class="page-item">
-              <a class="page-link" data-onclick-load-all="true" rv-route="" href="{{collection.url}}?page=all" aria-label="{{ 'navigation.paginate.all_label' | t }}">
-                <span aria-hidden="true">{{ 'navigation.paginate.all' | t }}</span>
-                <span class="sr-only">{{ 'navigation.paginate.all_label' | t }}</span>
+              <a class="page-link" data-onclick-load-all="true" rv-route="" href="{{collection.url}}?page=all" aria-label="{{ 'snippets.jumplink-pagination.all_label' | t }}">
+                <span aria-hidden="true">{{ 'snippets.jumplink-pagination.all' | t }}</span>
+                <span class="sr-only">{{ 'snippets.jumplink-pagination.all_label' | t }}</span>
               </a>
             </li>
           {% endif %}
 
           <li class="page-item {% unless paginate.next.is_link %}disabled{% endunless %}">
-            <a class="page-link" {% unless paginate.next.is_link %}disabled="disabled"{% endunless %} rv-route="" href="{{ paginate.next.url }}{{paginate_hash}}" aria-label="{{ 'navigation.paginate.next_label' | t }}">
-              {% include 'jumplink-iconset', name: 'arrow', direction: 'right' %}
-              <span class="sr-only">{{ 'navigation.paginate.next_label' | t }}</span>
+            <a class="page-link" {% unless paginate.next.is_link %}disabled="disabled"{% endunless %} rv-route="" href="{{ paginate.next.url }}{{ paginate_hash }}" aria-label="{{ 'snippets.jumplink-pagination.next_label' | t }}">
+              <span class="sr-only">{{ 'snippets.jumplink-pagination.next_label' | t }}</span>
             </a>
           </li>
-
         </ul>
       </nav>
+      {% endcomment %}
+
+      {% if paginate.next.is_link %}
+        <a class="cursor-pointer pt-5" rv-route-append-on-click='{"url": "{{ paginate.next.url }}{{ paginate_hash }}", "appendToSelector": ".rv-view-container", "removeAfterLoad": true}' aria-label="{{ 'snippets.jumplink-pagination.load_more' | t }}">
+          <span>{{ 'snippets.jumplink-pagination.load_more' | t }}</span>
+        </a>
+      {% endif %}
+
     </div>
   </div>
 {% endif %}
+
